ci: fix deploy workflow to read openiap-veresions.json

--- a/.github/workflows/deploy-swift.yml
+++ b/.github/workflows/deploy-swift.yml
@@ -46,7 +46,7 @@ jobs:
         run: |
           ./scripts/bump-version.sh "${{ env.VERSION }}"
           # Refresh VERSION to the computed value (handles major/minor/patch)
-          NEW_VERSION=$(cat VERSION)
+          NEW_VERSION=$(jq -r '.apple' openiap-versions.json)
           echo "VERSION=$NEW_VERSION" >> $GITHUB_ENV
           echo "Computed version: $NEW_VERSION"
 
